@startuml

  namespace ch.ffhs.drugstore {
    namespace presentation {
      namespace management {
        namespace drugs.view {
          namespace dialog {
            namespace add {
              class ch.ffhs.drugstore.presentation.management.drugs.view.dialog.add.AddDrugDialogFragment {
                  {static} + ARG_DRUG_DOSAGE : String
                  {static} + ARG_DRUG_ID : String
                  {static} + ARG_DRUG_STOCK_AMOUNT : String
                  {static} + ARG_DRUG_TITLE : String
                  {static} + ARG_DRUG_UNIT : String
                  {static} + TAG : String
                  - binding : DialogAddDrugBinding
                  - dosage : String
                  - drugId : Integer
                  - drugTitle : String
                  - stockAmount : Double
                  - unit : String
                  + AddDrugDialogFragment()
                  + onAttach()
                  + onCreate()
                  + onCreateDialog()
                  + onDetach()
                  - getAlertDialog()
                  - validateInputAndConfirmAddDrug()
              }
            }
          }
        }
      }
    }
  }
  

  namespace ch.ffhs.drugstore {
    namespace presentation {
      namespace management {
        namespace drugs.view {
          namespace dialog {
            namespace add {
              class ch.ffhs.drugstore.presentation.management.drugs.view.dialog.add.AddDrugDialogFragmentArgs {
                  - dosage : String
                  - drugId : int
                  - drugTitle : String
                  - stockAmount : double
                  - unit : String
                  + AddDrugDialogFragmentArgs()
                  + getDosage()
                  + getDrugId()
                  + getDrugTitle()
                  + getStockAmount()
                  + getUnit()
              }
            }
          }
        }
      }
    }
  }
  

  namespace ch.ffhs.drugstore {
    namespace presentation {
      namespace management {
        namespace drugs.view {
          namespace dialog {
            namespace add {
              interface ch.ffhs.drugstore.presentation.management.drugs.view.dialog.add.AddDrugDialogFragmentFactory {
                  {abstract} + create()
              }
            }
          }
        }
      }
    }
  }
  

  namespace ch.ffhs.drugstore {
    namespace presentation {
      namespace management {
        namespace drugs.view {
          namespace dialog {
            namespace add {
              interface ch.ffhs.drugstore.presentation.management.drugs.view.dialog.add.ConfirmAddDrugListener {
                  {abstract} + onConfirmAddDrug()
              }
            }
          }
        }
      }
    }
  }
  

  ch.ffhs.drugstore.presentation.management.drugs.view.dialog.add.AddDrugDialogFragment -up-|> androidx.fragment.app.DialogFragment
  ch.ffhs.drugstore.presentation.management.drugs.view.dialog.add.AddDrugDialogFragment o-- ch.ffhs.drugstore.presentation.management.drugs.view.dialog.add.ConfirmAddDrugListener : confirmAddDrugListener


@enduml
